Added endpoints for creating(register) logging and refreshing + logout, access is sent as json, while refresh token is stored in cookie
